--- a/style.css
+++ b/style.css
@@ -135,3 +135,35 @@ ul{
 .card-large .card-container .card-content:first-child{
     border-right: 1px solid var(--color-black);
 }
+
+/*===== Table ======*/
+.table{
+    width: 642px;
+    padding: 32px;
+    background-color: var(--color-white);
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+    border-radius: 16px;
+    margin: 56px;
+    text-align: center;
+}
+
+.table table{
+    width: 100%;
+    margin-top: 32px;
+}
+
+.table h5{
+    font-weight: 900;
+    font-size: 16px;
+    margin-bottom: 8px;
+}
+
+.table table th{
+    border-bottom: 1px solid #5e5e5e;
+    padding: 8px 0;
+}
+
+.table table td{
+    border-bottom:  1px solid #e9e9e9;
+    padding: 8px 0;
+}
