--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@ ul{
 
 .table table{
     width: 100%;
+    height: 310px;
     margin-top: 32px;
 }
 
@@ -166,4 +167,22 @@ ul{
 .table table td{
     border-bottom:  1px solid #e9e9e9;
     padding: 8px 0;
+}
+
+.content-info{
+    display: flex;
+    align-items: center;
+}
+
+.chart{
+    display: flex;
+    align-items: center;
+
+    width: 400px;
+    height: 450px;
+
+    background-color: var(--color-white);
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+    border-radius: 24px;
+    margin-right: 48px;
 }
